--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
        <link href="styles/navapol-style.css" rel="stylesheet" type="text/css">
    </head>
    <body>
-        <h1>
+        <h1 id="heading" >
         Jao Na Kor Pen Hero Dai Na!
        </h1>
-       <img src="images/meme.jpg" width="50%"
-       height="50%" alt="My test image">
+       <img id="imag-one" src="images/meme.jpg" width="50%" height="50%" alt="My test image">
+       <figure>
+         <img id="imag-two" src="images/ted.jpg" width="58%" height="50%" alt="My test image">
+         <figcaption>TEDxKhonKaenU commimg soon!</figcaption>
+       </figure>
        <p1><br><br>
         Midoriya appreciated
        </p1>
        <ul>
-            <li>อนิเมะโชเน็น</li>
+            <li id="popular" >อนิเมะโชเน็น</li>
             <li>ค่ายเยาวชน</li>
-            <li>กราฟฟิกดีไซน์</li>
+            <li id="popular" >กราฟฟิกดีไซน์</li>
        </ul>
       <p2>If you wanna know more about this Anime <a target="_blank" href="https://myheroacademia.fandom.com/wiki/My_Hero_Academia_(Anime)">My Hero Academia</a></p2>
    </body>
