--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
        <link href="styles/navapol-style.css" rel="stylesheet" type="text/css">
    </head>
    <body>
-        <h1 id="heading" >
-        Jao Na Kor Pen Hero Dai Na!
-       </h1>
-       <img id="imag-one" src="images/meme.jpg" width="50%" height="50%" alt="My test image">
-       <figure>
-         <img id="imag-two" src="images/ted.jpg" width="58%" height="50%" alt="My test image">
-         <figcaption>TEDxKhonKaenU commimg soon!</figcaption>
-       </figure>
-       <p1><br><br>
-        Midoriya appreciated
-       </p1>
-       <ul>
-            <li id="popular" >อนิเมะโชเน็น</li>
-            <li>ค่ายเยาวชน</li>
-            <li id="popular" >กราฟฟิกดีไซน์</li>
-       </ul>
-      <p2>If you wanna know more about this Anime <a target="_blank" href="https://myheroacademia.fandom.com/wiki/My_Hero_Academia_(Anime)">My Hero Academia</a></p2>
+      <div class="container">
+         <div class="header">
+            <h1 id="heading" >Jao Na Kor Pen Hero Dai Na!</h1>
+         </div>
+         <div class="image">
+            <img id="imag-one" src="images/meme.jpg" width=50% height=50% alt="My test image">
+          <figure>
+            <img id="imag-two" src="images/ted.jpg" width=58% height=50% alt="My test image">
+            <figcaption>TEDxKhonKaenU commimg soon!</figcaption>
+          </figure>
+         </div>
+         <div class="footer">
+            <p1><br><br>
+               Midoriya appreciated
+              </p1>
+              <ul>
+                   <li id="popular" >อนิเมะโชเน็น</li>
+                   <li>ค่ายเยาวชน</li>
+                   <li id="popular" >กราฟฟิกดีไซน์</li>
+              </ul>
+             <p2>If you wanna know more about this Anime <a target="_blank" href="https://myheroacademia.fandom.com/wiki/My_Hero_Academia_(Anime)">My Hero Academia</a></p2>
+         </div>
+      </div>
    </body>
 </html>
