--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
          <div class="image">
             <img id="imag-one" src="images/meme.jpg" width=50% height=50% alt="My test image">
           <figure>
-            <img id="imag-two" src="images/ted.jpg" width=58% height=50% alt="My test image">
+            <img id="imag-two" src="images/ted.jpg" width=55% height=50% alt="My test image">
             <figcaption>TEDxKhonKaenU commimg soon!</figcaption>
           </figure>
          </div>
          <div class="footer">
-            <p1><br><br>
-               Midoriya appreciated
-              </p1>
-              <ul>
-                   <li id="popular" >อนิเมะโชเน็น</li>
-                   <li>ค่ายเยาวชน</li>
-                   <li id="popular" >กราฟฟิกดีไซน์</li>
-              </ul>
-             <p2>If you wanna know more about this Anime <a target="_blank" href="https://myheroacademia.fandom.com/wiki/My_Hero_Academia_(Anime)">My Hero Academia</a></p2>
+            <p1><br><br>Midoriya appreciated</p1>
+            <ul>
+                  <li id="popular" >อนิเมะโชเน็น</li>
+                  <li>ค่ายเยาวชน</li>
+                  <li id="popular" >กราฟฟิกดีไซน์</li>
+            </ul>
+            <p2>If you wanna know more about this Anime <a target="_blank" href="https://myheroacademia.fandom.com/wiki/My_Hero_Academia_(Anime)">My Hero Academia</a></p2>
          </div>
       </div>
    </body>
