adjust a little bit

--- a/tournament-page.html
+++ b/tournament-page.html
@@ -205,9 +205,9 @@
       <!-- Footer -->
 
       <footer class="bg-dark">
-        <div class="container">
-          <p>&copy; KKU-VC 2022. All rights reserved.</p>
-        </div>
+        <div class="container" style="text-align: center;">
+            <p class="text-white">&copy; KKU-VC 2022. All rights reserved.</p>
+          </div>
       </footer>
       <!-- End Footer -->
 
