--- a/result-page.html
+++ b/result-page.html
@@ -93,8 +93,8 @@
       
       <!-- Footer -->
       <footer class="bg-dark">
-        <div class="container">
-          <p>&copy; KKU-VC 2022. All rights reserved.</p>
+        <div class="container" style="text-align: center;">
+          <p class="text-white">&copy; KKU-VC 2022. All rights reserved.</p>
         </div>
       </footer>
       
